<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvItemScheduleHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:gravity="right|bottom"
                android:textSize="@dimen/scheduleTitle"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvItemScheduleHourAmPm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ScheduleAmPm"
                android:gravity="right|top"
                android:textSize="@dimen/scheduleTitleAmPm"
                android:textColor="@color/colorPrimary"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ScheduleExpositorTitulo"
                android:textSize="@dimen/scheduleTitleConferencia"
                android:layout_marginLeft="@dimen/marginSchedule"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scheduleExpositorNombre"
                android:textSize="@dimen/scheduleTitleNombre"
                android:layout_marginLeft="@dimen/marginSchedule"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>




</LinearLayout>