<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardcornerRadius"
                app:cardElevation="4dp"
                android:layout_margin="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoImageViewHome"
                        android:src="@drawable/banner_platzi_conf"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/marginHeightHome"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginLeft="@dimen/marginViewHome"
                        android:layout_marginRight="@dimen/marginViewHome"
                        android:layout_marginBottom="@dimen/marginViewHome"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_que_es"
                        android:textSize="@dimen/tamanoTitulo"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"
                        android:layout_margin="@dimen/textMarginHome"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_que_es_resp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/textSize"
                        android:layout_marginLeft="@dimen/marginViewHome"
                        android:layout_marginRight="@dimen/marginViewHome"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/marginHeightHome"
                        android:background="@color/colorPrimaryDark"
                        android:layout_margin="@dimen/marginViewHome"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoImageViewHome"
                        android:src="@drawable/platzi_conf_2"
                        android:layout_marginBottom="@dimen/marginImageHome"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_por_que"
                        android:textSize="@dimen/tamanoTitulo"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:layout_margin="@dimen/textMarginHome"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_por_que_resp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/textSize"
                        android:layout_marginLeft="@dimen/marginViewHome"
                        android:layout_marginRight="@dimen/marginViewHome"
                        android:layout_marginBottom="@dimen/marginViewHome"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/marginHeightHome"
                        android:background="@color/colorPrimaryDark"
                        android:layout_margin="@dimen/marginViewHome"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoImageViewHome"
                        android:src="@drawable/platzi_conf_3"
                        android:layout_marginBottom="@dimen/marginImageHome"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_info"
                        android:textSize="@dimen/tamanoTitulo"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:layout_margin="@dimen/textMarginHome"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_info_resp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/textSize"
                        android:layout_marginLeft="@dimen/marginViewHome"
                        android:layout_marginRight="@dimen/marginViewHome"
                        android:layout_marginBottom="@dimen/marginViewHome"/>









                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</FrameLayout>