<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Toolbar
            android:id="@+id/toolbarConference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.AppBarLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp">
                    <ImageView
                        android:layout_width="@dimen/speakerImageProfile"
                        android:layout_height="@dimen/speakerImageProfile"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_profile"
                        android:scaleType="centerCrop"/>

                </RelativeLayout>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/cardcornerRadius"
                    app:cardElevation="@dimen/cardEelevation"
                    android:layout_margin="@dimen/cardMargin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/speakerExpositorNombre"
                            android:textSize="@dimen/scheduleTitleConferencia"
                            android:layout_marginLeft="@dimen/marginSchedule"
                            android:layout_marginBottom="@dimen/marginImageHome"
                            android:textStyle="bold"
                            android:textColor="@color/colorAccent"
                            android:layout_centerInParent="true"
                            android:gravity="center"/>
                        <TextView
                            android:id="@+id/tvInfoConfHour"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/speakerJobTitle"
                            android:textSize="@dimen/textSize"
                            android:textColor="@color/colorPrimary"
                            android:layout_marginBottom="@dimen/marginImageHome"
                            android:gravity="center"/>
                        <TextView
                            android:id="@+id/tvInfoConfSpeaker"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/speakerJob"
                            android:textSize="@dimen/scheduleTitleAmPm"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:gravity="center"/>

                        <ImageView
                            android:layout_width="@dimen/speakerTwitterImage"
                            android:layout_height="@dimen/speakerTwitterImage"
                            android:src="@drawable/ic_icons_twitter__1_"
                            android:layout_gravity="center"/>

                        <TextView
                            android:id="@+id/tvInfoConfInfo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/speakerLoreIp"
                            android:layout_marginTop="@dimen/marginScheduleDialog"
                            android:textSize="@dimen/textSize"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="italic"
                            android:gravity="center"/>


                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>

    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>